Fixed the layout margins for ProductCard, ProductSwimLane Fixed the flavor-menu visibility & open-location Adjusted the mobile-layout dimensions.

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1605,6 +1605,9 @@ select{
   top: 3rem;
   top: var(--height-nav);
 }
+.bottom-0{
+  bottom: 0px;
+}
 .-z-10{
   z-index: -10;
 }
@@ -1627,6 +1630,10 @@ select{
   margin-left: 1.5rem;
   margin-right: 1.5rem;
 }
+.mx-8{
+  margin-left: 2rem;
+  margin-right: 2rem;
+}
 .mx-auto{
   margin-left: auto;
   margin-right: auto;
@@ -1643,9 +1650,17 @@ select{
   margin-top: 2rem;
   margin-bottom: 2rem;
 }
-.mx-8{
-  margin-left: 2rem;
-  margin-right: 2rem;
+.mx-2{
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+}
+.mx-4{
+  margin-left: 1rem;
+  margin-right: 1rem;
+}
+.mx-12{
+  margin-left: 3rem;
+  margin-right: 3rem;
 }
 .-mb-px{
   margin-bottom: -1px;
@@ -1704,6 +1719,21 @@ select{
 }
 .mt-8{
   margin-top: 2rem;
+}
+.mr-2{
+  margin-right: 0.5rem;
+}
+.mr-6{
+  margin-right: 1.5rem;
+}
+.mr-8{
+  margin-right: 2rem;
+}
+.mr-10{
+  margin-right: 2.5rem;
+}
+.mr-12{
+  margin-right: 3rem;
 }
 .block{
   display: block;
@@ -2089,6 +2119,9 @@ select{
 .overflow-y-auto{
   overflow-y: auto;
 }
+.overflow-x-hidden{
+  overflow-x: hidden;
+}
 .overflow-y-scroll{
   overflow-y: scroll;
 }
@@ -2199,6 +2232,10 @@ select{
 .border-transparent{
   border-color: transparent;
 }
+.border-contrast{
+  --tw-border-opacity: 1;
+  border-color: rgb(var(#fafafa) / var(--tw-border-opacity));
+}
 .bg-black{
   --tw-bg-opacity: 1;
   background-color: rgba(0, 0, 0, var(--tw-bg-opacity));
@@ -2252,6 +2289,9 @@ select{
 .bg-zinc-500{
   --tw-bg-opacity: 1;
   background-color: rgba(113, 113, 122, var(--tw-bg-opacity));
+}
+.bg-primary\/0{
+  background-color: rgba(2, 6, 23, 0);
 }
 .bg-opacity-25{
   --tw-bg-opacity: 0.25;
@@ -2464,6 +2504,9 @@ select{
   font-size: 0.75rem;
   line-height: 1rem;
 }
+.font-black{
+  font-weight: 900;
+}
 .font-bold{
   font-weight: 700;
 }
@@ -2475,9 +2518,6 @@ select{
 }
 .font-semibold{
   font-weight: 600;
-}
-.font-black{
-  font-weight: 900;
 }
 .uppercase{
   text-transform: uppercase;
@@ -3330,12 +3370,46 @@ shop-pay-button {
     margin-bottom: 3rem;
   }
 
+  .sm\:mx-2{
+    margin-left: 0.5rem;
+    margin-right: 0.5rem;
+  }
+
+  .sm\:mx-6{
+    margin-left: 1.5rem;
+    margin-right: 1.5rem;
+  }
+
   .sm\:mb-0{
     margin-bottom: 0px;
   }
 
   .sm\:mt-0{
     margin-top: 0px;
+  }
+
+  .sm\:mr-12{
+    margin-right: 3rem;
+  }
+
+  .sm\:mr-1{
+    margin-right: 0.25rem;
+  }
+
+  .sm\:mr-6{
+    margin-right: 1.5rem;
+  }
+
+  .sm\:mr-16{
+    margin-right: 4rem;
+  }
+
+  .sm\:mr-8{
+    margin-right: 2rem;
+  }
+
+  .sm\:mr-10{
+    margin-right: 2.5rem;
   }
 
   .sm\:block{
@@ -3416,6 +3490,10 @@ shop-pay-button {
   .sm\:divide-gray-200 > :not([hidden]) ~ :not([hidden]){
     --tw-divide-opacity: 1;
     border-color: rgba(229, 231, 235, var(--tw-divide-opacity));
+  }
+
+  .sm\:overflow-x-hidden{
+    overflow-x: hidden;
   }
 
   .sm\:p-0{
@@ -3778,6 +3856,23 @@ shop-pay-button {
   .lg\:my-8{
     margin-top: 2rem;
     margin-bottom: 2rem;
+  }
+
+  .lg\:mx-8{
+    margin-left: 2rem;
+    margin-right: 2rem;
+  }
+
+  .lg\:mr-8{
+    margin-right: 2rem;
+  }
+
+  .lg\:mr-12{
+    margin-right: 3rem;
+  }
+
+  .lg\:mr-16{
+    margin-right: 4rem;
   }
 
   .lg\:flex{
